<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:weightSum="2"
                android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnFlag"
                    android:text="@string/btn_place_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:gravity="end"
                android:layout_weight="1"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnRestart"
                    android:text="@string/btn_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

        <com.example.minesweeper.views.MinesweeperView
                android:id="@+id/minesweeperView"
                android:background="@color/minesweeperBoard"
                android:layout_width="350dp"
                android:layout_height="350dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:weightSum="3"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnSmall"
                    android:text="@string/btn_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnMedium"
                    android:text="@string/btn_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btnLarge"
                    android:text="@string/btn_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>